objects/Hubspot_Config_Info__c.object
<CustomObject>
    <description>Object to track configuration on Hubspot information pulled form Hubspot to SalesForce.com</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This record is actively being used by CastIron to pull data from Hubspot</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_last_timeoffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HS Last Timeoffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_last_vidoffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HS Last Vidoffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Campaign_Email_Name__c</fullName>
        <inlineHelpText>Email Name is Required for a Campaign and should be exactly same as in Marketing Hubspot</inlineHelpText>
        <label>Hubspot Campaign Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Campaign_Event_Status__c</fullName>
        <inlineHelpText>&apos;forms-based&apos; is not a campaign event but identifies form was filled out</inlineHelpText>
        <label>Hubspot Campaign Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms-based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubspot_Campaign_Name__c</fullName>
        <inlineHelpText>Hubspot Campaign or Hubspot Contact List can be populated for a Hubspot Record</inlineHelpText>
        <label>Hubspot Campaign Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Contact_List_Name__c</fullName>
        <inlineHelpText>Hubspot Contact List or Hubspot Campaign can be populated for a Hubspot Record</inlineHelpText>
        <label>Hubspot Contact List Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Instance_Name__c</fullName>
        <label>Hubspot Instance Name</label>
        <picklist>
            <picklistValues>
                <fullName>ADP_DEALER_SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COBALT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIGHTSPEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Description__c</fullName>
        <inlineHelpText>Description to appear in the &quot;Details&quot; field of the Marketing Interaction object. For Campaign you can add Campaign and Email Name in this Field</inlineHelpText>
        <label>Interaction Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Interaction__c</fullName>
        <label>Type of Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>Hubspot Campaign Email Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot Campaign Email Link Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot Form Filled Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Viewed on Website</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>last_run_datetime__c</fullName>
        <label>Last Run Datetime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Hubspot Config Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hubspot_Contact_List_Name__c</columns>
        <columns>Hubspot_Campaign_Name__c</columns>
        <columns>Hubspot_Campaign_Email_Name__c</columns>
        <columns>Hubspot_Campaign_Event_Status__c</columns>
        <columns>Hubspot_Instance_Name__c</columns>
        <columns>Interaction_Description__c</columns>
        <columns>Type_of_Interaction__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HCI-{00000}</displayFormat>
        <label>Hubspot Config Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hubspot Config Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_Mkt_CampaignEmailNameEventStatus_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISBLANK(Hubspot_Campaign_Name__c), 
OR(NOT(ISBLANK(TEXT(Hubspot_Campaign_Event_Status__c))),NOT(ISBLANK(Hubspot_Campaign_Email_Name__c))))</errorConditionFormula>
        <errorDisplayField>Hubspot_Campaign_Email_Name__c</errorDisplayField>
        <errorMessage>You can not have Campaign Email Name or Event Status for null Campaign Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Mkt_CampaignEmailNameEventStatus_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Hubspot_Campaign_Name__c)), 
OR(ISBLANK(TEXT(Hubspot_Campaign_Event_Status__c)),
ISBLANK(Hubspot_Campaign_Email_Name__c))
)</errorConditionFormula>
        <errorDisplayField>Hubspot_Campaign_Email_Name__c</errorDisplayField>
        <errorMessage>Hubspot Campaign Email Name and Event Status are Required for Hubspot Campaign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Mkt_ContactList_Campaign_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Hubspot_Contact_List_Name__c),ISBLANK(Hubspot_Campaign_Name__c))</errorConditionFormula>
        <errorDisplayField>Hubspot_Contact_List_Name__c</errorDisplayField>
        <errorMessage>You need to populate Hubspot Contact List Name or Hubspot Campaign Name for a Hubspot Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Mkt_ContactList_Campaign_Verification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Hubspot_Contact_List_Name__c)),NOT(ISBLANK(Hubspot_Campaign_Name__c)))</errorConditionFormula>
        <errorDisplayField>Hubspot_Contact_List_Name__c</errorDisplayField>
        <errorMessage>You can only have Hubspot Contact List Name or Hubspot Campaign Name filled in for a Hubspot Record</errorMessage>
    </validationRules>
</CustomObject>